test/files/neg/t8143a.check
t8143a.scala:2: error: overriding method f in class Foo of type => Int;
 method f has weaker access privileges; it should not be private
class Bar extends Foo { private def f = 10 }
                                    ^
one error found
